ClipPath on menu page for small devices fixed

--- a/css/header.css
+++ b/css/header.css
@@ -30,6 +30,7 @@
 
 .clipPath.fixed{
     position: fixed;
+    height: 100vh;
 }
 
 @media screen and (min-width: 768px) {
